--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="Boxeador.png" alt="Boxer" width="100">
+    <img src="pelon.jpg" alt="Descripción de la imagen" width="300">
 </body>
 </html>
