--- a/Boxeo.html
+++ b/Boxeo.html
@@ -67,7 +67,7 @@
         .info-section {
             width: 50%;
             min-width: 450px;
-            background-color: #1a202c;
+            background-color: #04173d;
             padding: 20px;
             border-radius: 10px;
             box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
@@ -117,7 +117,7 @@
         .quiz-section {
             margin-top: 20px;
             padding-top: 20px;
-            border-top: 1px dashed #4b5563;
+            border-top: 1px dashed #363b41;
             text-align: center;
         }
         .quiz-section button {
